--- a/manifest.json
+++ b/manifest.json
@@ -2,10 +2,10 @@
 	"id": "slackify-note",
 	"name": "Slackify Note",
 	"version": "1.2.1",
-	"minAppVersion": "0.15.0",
+	"minAppVersion": "1.4.16",
 	"description": "Converts a note to a Slack-compliant markdown using [slackify-markdown](https://www.npmjs.com/package/slackify-markdown)",
 	"author": "Jeremy Overman",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
+	"authorUrl": "https://github.com/jeremyoverman",
+	"fundingUrl": "https://www.buymeacoffee.com/jeremyoverman",
 	"isDesktopOnly": false
 }
